# serializer version: 1
# name: test_all_entities[da_rvc_map_01011][vacuum.robot_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'fan_speed_list': list([
        'normal',
        'maximum',
        'smart',
        'quiet',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.robot_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12340>,
    'translation_key': 'vacuum',
    'unique_id': '01b28624-5907-c8bc-0325-8ad23f03a637_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_rvc_map_01011][vacuum.robot_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'fan_speed': 'maximum',
      'fan_speed_list': list([
        'normal',
        'maximum',
        'smart',
        'quiet',
      ]),
      'friendly_name': 'Robot Vacuum',
      'supported_features': <VacuumEntityFeature: 12340>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.robot_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_all_entities[da_rvc_normal_000001][vacuum.robot_vacuum_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'fan_speed_list': list([
        'normal',
        'maximum',
        'smart',
        'quiet',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.robot_vacuum_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12340>,
    'translation_key': 'vacuum',
    'unique_id': '3442dfc6-17c0-a65f-dae0-4c6e01786f44_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_rvc_normal_000001][vacuum.robot_vacuum_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'fan_speed': 'smart',
      'fan_speed_list': list([
        'normal',
        'maximum',
        'smart',
        'quiet',
      ]),
      'friendly_name': 'Robot vacuum 1',
      'supported_features': <VacuumEntityFeature: 12340>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.robot_vacuum_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
